Edit and add findings/conclusions to notebooks

--- a/notebooks/MCA_automobile_data.ipynb
+++ b/notebooks/MCA_automobile_data.ipynb
@@ -4,16 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Install/import python packages, set additional notebook rules and define useful constants:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# MCA Analysis on Automobile Dataset \n",
     "\n",
-    "This notebook aims to apply Multiple Correspondence Analysis (EDA) to know better [Automobile Dataset](https://www.kaggle.com/datasets/toramky/automobile-dataset/) - categorical variables - and to infer characteristics of the data which will be used into AI model construction and training. Here we select MCA since we have multiple categorical variables.\n",
+    "This notebook aims to apply Multiple Correspondence Analysis (EDA) to know better [Automobile Dataset](https://www.kaggle.com/datasets/toramky/automobile-dataset/) - categorical variables - and to infer characteristics of the data which will be used into AI model training. Here we select MCA since we have multiple categorical variables.\n",
     "\n",
     "The MCA represents categorical variable as points in multidimensional space such that we catch the maximum amount of variation.\n",
     "\n",
@@ -81,9 +74,7 @@
     "import prince\n",
     "import seaborn as sns\n",
     "from sklearn.feature_selection import SelectKBest, chi2 # for chi-squared feature selection\n",
-    "from sklearn.preprocessing import LabelEncoder, OrdinalEncoder\n",
-    "\n",
-    "from ydata_profiling import profile_report"
+    "from sklearn.preprocessing import LabelEncoder, OrdinalEncoder"
    ]
   },
   {
@@ -115,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load car data and divide it into two quantative and categorical datasets according to attribute types. We then apply MCA analysis on categorical dataset and PCA analysis on quantative dataset. We set categorical ordinal variables into numeric, while consider numeric 'symboling' variable as categorical nominal variable - target variable for MCA analysis. "
+    "Load car data and divide it into two quantative and categorical datasets according to attribute types. We then apply MCA analysis on categorical dataset and PCA analysis on quantative dataset. We set categorical ordinal variables into numeric, while consider a numeric 'symboling' variable as a categorical ordinal variable - target variable for MCA analysis. "
    ]
   },
   {
@@ -390,13 +381,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Define categorical attributes of automobile data, print out category data and all category feature value."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -405,13 +389,6 @@
     "quant_attr = [\"normalized-losses\", \"price\", \"wheel-base\", \"length\", \"width\", \"height\", \"curb-weight\", \"engine-size\", \"bore\", \"stroke\", \"compression-ratio\",\n",
     "              \"horsepower\", \"peak-rpm\", \"city-mpg\", \"highway-mpg\"]\n",
     "cat_attr = [\"make\", \"fuel-type\", \"aspiration\", \"num-of-doors\", \"body-style\", \"drive-wheels\", \"engine-location\", \"engine-type\", \"num-of-cylinders\", \"fuel-system\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Replace '?' with NaN value and then with the most common categorical attribute value."
    ]
   },
   {
@@ -826,15 +803,6 @@
     "print(df_cat_attr.shape)\n",
     "print(df_cat_attr_dummy.shape)\n",
     "print(\"Features after get_dummies:\\n\", list(df_cat_attr_dummy.columns))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
    ]
   },
   {
@@ -1636,7 +1604,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. Findings"
+    "#### 4. Findings\n",
+    "From the analysis in this notebook we reached the following conclusions:\n",
+    "- we can use MCA algorithm for exploratory analysis of the categorical data\n",
+    "- we can use chi-square + MCA analysis to evaluate intra correlation/importance between categorical variables - we evaluated importance of all categorical features to 'symboling'. Thus we can use it for dimensionality reduction but not to evaluate importance of categorical features to a numeric feature as 'Price'\n",
+    "- we can compute components of categorical data through MCA analysis similar to those computed through PCA analysis on numeric data. We can combine both of them to apply after that a regression algorithm for prediction of a numeric variable.\n"
    ]
   }
  ],
